<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2013, Expedia Affiliate Network
    All rights reserved.

    Redistribution and use in source and binary forms, with or without
    modification, are permitted provided that redistributions of source code
    retain the above copyright notice, these conditions, and the following
    disclaimer. 

    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
    ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
    DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
    ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
    (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
    LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
    ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
    (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

    The views and conclusions contained in the software and documentation are those
    of the authors and should not be interpreted as representing official policies, 
    either expressed or implied, of the Expedia Affiliate Network or Expedia Inc.
-->

<resources>
    <string name="app_name">Dakkar</string>
    <string name="search_bar_autotext">Search for hotels in a destination.</string>
    <string name="search_for_hotels">Search For Hotels</string>
    <string name="change_the_date">Change the date</string>
    <string name="from">from</string>
    <string name="loading_address">loading address…</string>
    <string name="loading_descriptions">loading description…</string>
    <string name="loading_rooms">loading rooms…</string>
    <string name="no_rooms_available">There are no rooms available for the search parameters.</string>
    <string name="arrival">Check in:</string>
    <string name="departure">Check out:</string>
    <string name="adults">Adults:</string>
    <string name="children">Children:</string>
    <string name="guests">Guests:</string>
    <string name="room_type">Room Type:</string>
    <string name="bed_type">Bed Type:</string>
    <string name="book">Book</string>
    <string name="price_details">Price Details</string>
    <string name="total_charges">Total Charges</string>
    <string name="security_notice_title">Secure Booking</string>
    <string name="security_notice_text">We keep all your personal information secure and encrypted.\nWe won\'t share or
        sell your personal information.
    </string>
    <string name="guest_information">Guest Information:</string>
    <string name="guest_first_name">First Name</string>
    <string name="guest_last_name">Last Name</string>
    <string name="guest_phone">Phone</string>
    <string name="guest_email">Email for Confirmation</string>
    <string name="billing_information">Billing Information:</string>
    <string name="billing_address_1">Address Line 1</string>
    <string name="billing_address_2">Address Line 2</string>
    <string name="billing_city">City</string>
    <string name="billing_state">State</string>
    <string name="billing_country">Country</string>
    <string name="billing_zip">Zip</string>
    <string name="billing_cc_num">Credit Card Num</string>
    <string name="billing_cc_expmo">MM</string>
    <string name="billing_cc_expyr">YY</string>
    <string name="billing_cc_security">Security Code (See back of credit card)</string>
    <string name="billing_legal_disclaimer">Legal stuff and junk goes here that includes links to the
        <u>Privacy Policy</u>
        and
        <u>Terms of Use</u>
        on a web page. Those pages will need to be built.
    </string>
    <string name="number_of_adults_prompt">Select number of adults</string>
    <string name="number_of_children_prompt">Select number of children</string>
    <string name="taxes_and_fees">Taxes &amp; Fees</string>
    <string name="redirected">Couldn\'t connect to EAN API network.</string>
    <string name="adults_comma_children">%1$d Adult(s), %2$d Child(ren)</string>
    <string name="choose_contact">Choose from contacts</string>
    <string name="searching">Searching</string>
    <string name="loading_more_hotels">Loading more hotels&#8230;</string>
    <string name="complete_booking">Complete Booking</string>
    <string name="incorrect_expiration_year">
        Incorrect credit card expiration year detected. Ensure that you use a
        two-digit number for the year.</string>
    <string name="incorrect_expiration_month">
        Incorrect credit card expiration month detected. Ensure that you use
        a two-digit month between 01 and 12.
    </string>
    <string name="load_default_billing_info">Load Default Billing Info</string>
    <string name="itinerary_id">Itinerary ID</string>
    <string name="confirmation_numbers">Confirmation Numbers</string>
    <string name="checkin_instructions">Check-In Instructions</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="departure_date">Departure Date</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="room_description">Room Description</string>
</resources>
