<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/background">
    <LinearLayout android:id="@+id/searcher"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <EditText android:id="@+id/searchBox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/search_bar_autotext"
                  android:layout_weight="6"
                  android:editable="true"/>

        <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/suggestionsView"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView android:id="@+id/arrival_label"
                      android:layout_width="wrap_content"
                      android:layout_weight="2"
                      android:layout_height="0dip"
                      android:text="@string/arrival"
                      android:gravity="bottom"
                      android:textColor="@color/text"/>
            <Button android:id="@+id/arrival_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:layout_height="0dip"
                    android:text="Change the date"
                    android:layout_gravity="bottom"
                    android:onClick="showDatePickerDialog"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView android:id="@+id/departure_label"
                      android:layout_width="wrap_content"
                      android:layout_weight="2"
                      android:layout_height="0dip"
                      android:text="@string/departure"
                      android:gravity="right"
                      android:textColor="@color/text"/>
            <Button android:id="@+id/departure_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:layout_height="0dip"
                    android:text="Change the date"
                    android:layout_gravity="bottom"
                    android:onClick="showDatePickerDialog"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView android:id="@+id/adult_label"
                  android:layout_width="0dip"
                  android:layout_weight="2"
                  android:layout_height="wrap_content"
                  android:text="@string/adults"
                  android:gravity="right"
                  android:textColor="@color/text"/>
        <Spinner android:id="@+id/adults_spinner"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:prompt="@string/number_of_adults_prompt"
                 android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView android:id="@+id/child_label"
                  android:layout_width="0dip"
                  android:layout_weight="2"
                  android:layout_height="wrap_content"
                  android:text="@string/children"
                  android:gravity="right"
                  android:textColor="@color/text"/>
        <Spinner android:id="@+id/children_spinner"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:prompt="@string/number_of_children_prompt"
                 android:spinnerMode="dropdown"/>
    </LinearLayout>

</LinearLayout>
