<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">
<LinearLayout android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:layout_marginLeft="4dip"
              android:background="@color/background">
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="4dip">
            <LinearLayout android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/hotelFullInfoName"
                          android:textSize="20dip"
                          android:textColor="@color/text"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/hotelFullInfoAddress"
                          android:textSize="13dip"
                          android:gravity="left"
                          android:text="@string/loading_address"
                          android:textColor="@color/text"/>
                <include android:id="@+id/hotelFullInfoStars" layout="@layout/starrating" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/hotelFullInfoThumbsAndMap"
                      android:layout_height="120dip"
                      android:layout_width="fill_parent">
            <ImageView android:layout_weight="5"
                       android:id="@+id/hotelFullInfoThumb"
                       android:layout_height="fill_parent"
                       android:layout_width="0dip"
                       android:layout_marginRight="4dip"
                       android:layout_marginLeft="4dip"
                       android:src="@drawable/noimg_small" />
            <LinearLayout android:layout_weight="8"
                          android:orientation="vertical"
                          android:layout_height="fill_parent"
                          android:layout_width="0dip">
                <LinearLayout android:layout_height="0dip"
                              android:layout_width="fill_parent"
                              android:layout_weight="1">
                    <ImageView android:id="@+id/hotelFullInfoSmallThumb00"
                               android:layout_height="fill_parent"
                               android:layout_width="0dip"
                               android:layout_weight="5"
                               android:layout_marginBottom="2dip"
                               android:layout_marginRight="2dip"
                               android:src="@drawable/noimg_small" />
                    <ImageView android:id="@+id/hotelFullInfoSmallThumb01"
                               android:layout_height="fill_parent"
                               android:layout_width="0dip"
                               android:layout_weight="5"
                               android:layout_marginBottom="2dip"
                               android:layout_marginRight="2dip"
                               android:src="@drawable/noimg_small" />
                    <ImageView android:id="@+id/hotelFullInfoSmallThumb02"
                               android:layout_height="fill_parent"
                               android:layout_width="0dip"
                               android:layout_weight="5"
                               android:layout_marginBottom="2dip"
                               android:layout_marginRight="2dip"
                               android:src="@drawable/noimg_small" />
                </LinearLayout>
                <LinearLayout android:layout_height="0dip"
                              android:layout_width="fill_parent"
                              android:layout_weight="1">
                    <ImageView android:id="@+id/hotelFullInfoSmallThumb10"
                               android:layout_height="fill_parent"
                               android:layout_width="0dip"
                               android:layout_weight="5"
                               android:layout_marginRight="2dip"
                               android:src="@drawable/noimg_small" />
                    <ImageView android:id="@+id/hotelFullInfoSmallThumb11"
                               android:layout_height="fill_parent"
                               android:layout_width="0dip"
                               android:layout_weight="5"
                               android:layout_marginRight="2dip"
                               android:src="@drawable/noimg_small" />
                    <ImageView android:id="@+id/hotelFullInfoSmallThumb12"
                               android:layout_height="fill_parent"
                               android:layout_width="0dip"
                               android:layout_weight="5"
                               android:layout_marginRight="2dip"
                               android:src="@drawable/noimg_small" />
                </LinearLayout>
            </LinearLayout>
            <ImageView android:layout_weight="5"
                       android:id="@+id/hotelFullInfoMaplink"
                       android:layout_height="fill_parent"
                       android:layout_width="0dip"
                       android:layout_marginRight="4dip"
                       android:layout_marginLeft="4dip"
                       android:layout_gravity="center"
                       android:src="@drawable/map" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="1dip"
                      android:background="#000000"
                      android:layout_marginTop="4dip"/>
        <TextView android:id="@+id/loadingRoomsView"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:textColor="@color/text"
                  android:text="@string/loading_rooms" />
        <TextView android:id="@+id/noRoomsAvailableView"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:textColor="@color/text"
                  android:text="@string/no_rooms_available"
                  android:visibility="gone"
                  android:textStyle="bold"/>
        <TableLayout android:id="@+id/roomRateList"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"/>
        <WebView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/hotelFullInfoDescription"
                  android:isScrollContainer="false"/>

    </LinearLayout>
</ScrollView>